--- a/homme-body-editorial/index.html
+++ b/homme-body-editorial/index.html
@@ -23,9 +23,9 @@
   				</p>
   			</div>
 		</details>
-		<div id="index">
+		<!-- <div id="index">
 			<a href="javascript:history.back()">Index</a>
-		</div>
+		</div> -->
 	</header>
 
 	<nav class="left">
@@ -54,46 +54,46 @@
 
 	<main class="scroll">
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_1--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_1--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_1--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_1--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_2--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_2--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_2--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_2--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_3--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_3--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_3--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_3--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_4--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_4--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_4--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_4--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_5--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_5--Shot_by_Didier_Osias">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_5--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_5--Shot_by_Didier_Osias">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_6--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_6--Shot_by_Didier_Osias">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_6--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_6--Shot_by_Didier_Osias">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_7--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_7--Shot_by_Didier_Osias">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_7--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_7--Shot_by_Didier_Osias">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_8--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_8--Shot_by_Didier_Osias">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_8--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_8--Shot_by_Didier_Osias">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_9--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_9--Shot_by_Didier_Osias">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_9--Shot_by_Didier_Osias.webp" id="HOMME_BODY_Editorial_9--Shot_by_Didier_Osias">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_10--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_10--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_10--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_10--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_11--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_11--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_11--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_11--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/HOMME_BODY_Editorial_12--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_12--Shot_by_Phi_Vu">
+			<img src="../assets/images/homme_body-2023/editorial/Editorial_12--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Editorial_12--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/Cortez_Derby_1_in_collaboration_with_Batrachotoxin.webp" id="Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
+			<img src="../assets/images/homme_body-2023/editorial/Cortez_Derby_1_in_collaboration_with_Batrachotoxin.webp" id="Cortez_Derby_1_in_collaboration_with_Batrachotoxin">
 		</figure>
 		<figure>
-			<img src="../assets/images/homme-body/editorial/Cortez_Derby_2_in_collaboration_with_Batrachotoxin.webp" id="Cortez_Derby_2_in_collaboration_with_Batrachotoxin">
+			<img src="../assets/images/homme_body-2023/editorial/Cortez_Derby_2_in_collaboration_with_Batrachotoxin.webp" id="Cortez_Derby_2_in_collaboration_with_Batrachotoxin">
 		</figure>
 	</main>
 	<script src="../assets/js/loadpage.js"></script>
