--- a/untitled-editorial-lookbook/index.html
+++ b/untitled-editorial-lookbook/index.html
@@ -23,9 +23,9 @@
   				</p>
   			</div>
 		</details>
-		<div id="index">
+		<!-- <div id="index">
 			<a href="javascript:history.back()">Index</a>
-		</div>
+		</div> -->
 	</header>
 
 	<nav class="left">
@@ -54,22 +54,22 @@
 
 	<main class="scroll">
 		<figure>
-			<img loading="lazy" src="../assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_1--Shot_by_Ashley_Zhang.webp" id="Untitled_2022_Editorial_1--Shot_by_Ashley_Zhang">
+			<img loading="lazy" src="../assets/images/untitled-2022/lookbook-editorial/Editorial_1--Shot_by_Ashley_Zhang.webp" id="Untitled_2022_Editorial_1--Shot_by_Ashley_Zhang">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_2--Shot_by_Tommy_Park.webp" id="Untitled_2022_Editorial_2--Shot_by_Tommy_Park">
+			<img loading="lazy" src="../assets/images/untitled-2022/lookbook-editorial/Editorial_2--Shot_by_Tommy_Park.webp" id="Untitled_2022_Editorial_2--Shot_by_Tommy_Park">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_3--Shot_by_Tommy_Park.webp" id="Untitled_2022_Editorial_3--Shot_by_Tommy_Park">
+			<img loading="lazy" src="../assets/images/untitled-2022/lookbook-editorial/Editorial_3--Shot_by_Tommy_Park.webp" id="Untitled_2022_Editorial_3--Shot_by_Tommy_Park">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_4--Shot_by_Ashley_Zhang.webp" id="Untitled_2022_Editorial_4--Shot_by_Ashley_Zhang">
+			<img loading="lazy" src="../assets/images/untitled-2022/lookbook-editorial/Editorial_4--Shot_by_Ashley_Zhang.webp" id="Untitled_2022_Editorial_4--Shot_by_Ashley_Zhang">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_5--Shot_by_Ashley_Zhang.webp" id="Untitled_2022_Editorial_5--Shot_by_Ashley_Zhang">
+			<img loading="lazy" src="../assets/images/untitled-2022/lookbook-editorial/Editorial_5--Shot_by_Ashley_Zhang.webp" id="Untitled_2022_Editorial_5--Shot_by_Ashley_Zhang">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/untitled/lookbook-editorial/Untitled,_2022_Editorial_6--Shot_by_Tommy_Park.webp" id="Untitled_2022_Editorial_6--Shot_by_Tommy_Park">
+			<img loading="lazy" src="../assets/images/untitled-2022/lookbook-editorial/Editorial_6--Shot_by_Tommy_Park.webp" id="Untitled_2022_Editorial_6--Shot_by_Tommy_Park">
 		</figure>
 	</main>
 	<script src="../assets/js/loadpage.js"></script>
