--- a/homme-body-lookbook/index.html
+++ b/homme-body-lookbook/index.html
@@ -23,9 +23,9 @@
   				</p>
   			</div>
 		</details>
-		<div id="index">
+		<!-- <div id="index">
 			<a href="javascript:history.back()">Index</a>
-		</div>
+		</div> -->
 	</header>
 
 	<nav class="left">
@@ -54,28 +54,28 @@
 
 	<main class="scroll">
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_1_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_2_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_3_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_4_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_5_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_6_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_7_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/homme-body/lookbook/HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/homme_body-2023/lookbook/Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu.webp" id="HOMME_BODY_Look_8_White_Cotton_Undershirt_with_Black_Double_Pleated_Shorts--Shot_by_Phi_Vu">
 		</figure>
 	</main>
 	<script src="../assets/js/loadpage.js"></script>
