--- a/untitled-editorial-lookbook/index.html
+++ b/untitled-editorial-lookbook/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header>
-		<h1><a href="/">Brandon J.&thinsp;Chu</a></h1>
+		<h1><a href="/" class="normal">Brandon J.&thinsp;Chu</a>,</h1>
 		<details>
   			<summary>Info</summary>
   			<div>
@@ -34,13 +34,14 @@
 			<h2>
 				<details>
 					<summary>Collection</summary>
-					<ul>
+					<ol>
 						<li><a href="../homme-body-editorial"><span class="arrRight">Homme Body, 2023</span>Editorial</a></li>
 						<li><a href="../homme-body-lookbook"><span class="arrRight">Homme Body, 2023</span>Lookbook</a></li>
-					</ul>
+						<li><a href="../sketchbook"><span class="arrRight">Sketchbook, 2023</span>Portfolio</a></li>
+					</ol>
 				</details>
 			</h2>
-			<h3><span class="arrRight">Homme Body, 2023</span>Editorial</h3>
+			<h3><span class="arrRight">Untitled, 2022</span>Editorial/Lookbook</h3>
 		</div>
 		<div id="description">
 			<p>
