--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -19,7 +19,7 @@
   					<a href="mailto:brandon@brandonjchu.com" target="_blank">Email</a>, 
 					<a href="https://www.instagram.com/brandonjchu/" target="_blank">Instagram</a>, 
   					<a href="https://www.linkedin.com/in/brandon-j-chu/" target="_blank">linkedIn</a>, 
-  					<a href="" target="_blank">Resume.pdf</a>
+  					<a href="../assets/Brandon_J_Chu_Resume.pdf" target="_blank">Resume.pdf</a>
   				</p>
   			</div>
 		</details>
@@ -32,7 +32,7 @@
 		<div>&nbsp;</div>
 		<div>
 			<h2>
-				<details>
+				<details class="dropdown">
 					<summary>Collection</summary>
 					<ol>
 						<li><a href="../homme-body-editorial"><span class="arrRight">Homme Body, 2023</span>Editorial</a></li>
@@ -58,19 +58,22 @@
 			<img loading="lazy" src="../assets/images/sketchbook-2023/Double-Breasted_Jacket_Pattern_Sketch.webp" id="HOMME_BODY_Look_1_-_Black_Double-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
+			<img loading="lazy" src="../assets/images/sketchbook-2023/Lapel_Study_1_-_Double_Breasted_Jacket.webp" id="HOMME_BODY_Look_4_-_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
+		</figure>
+		<figure>
 			<img loading="lazy" src="../assets/images/sketchbook-2023/Ike_Jacket_Pattern_Sketch.webp" id="HOMME_BODY_Look_2_-_Navy_Y-Collar_Double-Breasted_Jacket_with_Navy_CF_Pleated_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
-			<img loading="lazy" src="../assets/images/sketchbook-2023/Pattern-making_Development_1.webp" id="HOMME_BODY_Look_3_-_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu">
-		</figure>
-		<figure>
-			<img loading="lazy" src="../assets/images/sketchbook-2023/Pattern-making_Development_2.webp" id="HOMME_BODY_Look_4_-_Black_Dropped_Shoulder_Single-Breasted_Jacket_with_Black_Double_Pleated_Trousers--Shot_by_Phi_Vu">
+			<img loading="lazy" src="../assets/images/sketchbook-2023/Lapel_Study_2_-_Ike_Jacket.webp" id="HOMME_BODY_Look_3_-_Navy_Military_Ike_Jacket_with_Black_Flared_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
 			<img loading="lazy" src="../assets/images/sketchbook-2023/Fitting_Process_1.webp" id="HOMME_BODY_Look_5_-_Black_One-Button_Flannel_Jacket_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
 			<img loading="lazy" src="../assets/images/sketchbook-2023/Fitting_Process_2.webp" id="HOMME_BODY_Look_6_-_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
+		</figure>
+		<figure>
+			<img loading="lazy" src="../assets/images/sketchbook-2023/Fitting_Process_3.webp" id="HOMME_BODY_Look_6_-_Black_Alpaca_Wool_Sweater_with_Black_Silk-Waistband_Belt_Trousers--Shot_by_Phi_Vu">
 		</figure>
 		<figure>
 			<img loading="lazy" src="../assets/images/sketchbook-2023/Technical_Flats_-_Tops.svg" id="HOMME_BODY_Look_7_-_Navy_Alpaca_Wool_Sweater_with_Black_CF_Pleated_Trousers--Shot_by_Phi_Vu">
