--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 		.imgGrid figcaption::before {
 		  counter-increment: index;
 		  content: counter(index);
-		  font-family: Arial;
-		  font-weight: bold;
+/*		  font-family: Arial;*/
+/*		  font-weight: bold;*/
 		}
   		.imgGrid figcaption{
 			margin-top: 1.2rem;
@@ -124,15 +124,15 @@
 		ol li{ 
 			position: relative;
 			counter-increment: index;
-			padding-left: 2rem;
+			padding-left: 1.75rem;
 		}
 		
 		ol li:before{ 
 			position: absolute;
 			content: counter(index) ".";
-			margin-left: -2em;
-			font-family: Arial;
-			font-weight: bold;
+			margin-left: -1.75rem;
+/*			font-family: Arial;*/
+/*			font-weight: bold;*/
 		}
 
   		details summary{
@@ -163,19 +163,29 @@
 /*			transform-origin: center;*/
 /*			transform: scaleX(0.75);*/
 		}
+
+		@media all and (max-width: 36em) { 
+			summary:after, .arrDown:after{
+				font-size: 10px;
+				vertical-align: 1px;
+			} 
+		}
+
 		details[open] summary:after{
 /*			content:'△';*/
 			content:'▲';
 		}
+
+
 		.arrRight{
-			font-family: Arial;
-			font-weight: bold;
+/*			font-family: Arial;*/
+/*			font-weight: bold;*/
 		}
 		.arrRight:after{
 			content:'►';
 /*			content:'▷';*/
 			display: inline-block;
-			margin: 0 0.1rem 0 0.2rem;
+			margin: 0 0rem 0 0.3rem;
 			-webkit-text-stroke-width: 1px;
 			-webkit-text-stroke-color: #000;
 			color:transparent;
@@ -184,13 +194,21 @@
 			vertical-align: 1px;
 /*			transform: scaleX(1.2);*/
 		}
+
+		@media all and (max-width: 36em) { 
+			.arrRight:after{
+				font-size: 10px;
+				vertical-align: 1px;
+			} 
+		}
+
 		sub{
 			font-size: 0.8rem;
 		}
-		.normal{
+		/*.normal{
 			font-family: Arial;
 			font-weight: bold;
-		}
+		}*/
 		h3{
 /*			font-family: Arial;*/
 /*			font-weight: bold;*/
@@ -198,10 +216,10 @@
 /*			transform: scaleX(0.9);*/
 /*			-webkit-text-stroke-width:0.01rem;*/
 		}
-		.project{
+		/*.project{
 			font-family: Arial;
 			font-weight: bold;
-		}
+		}*/
 	</style>
 </head>
 <body>
@@ -215,7 +233,7 @@
   					<a href="mailto:brandon@brandonjchu.com" target="_blank">Email</a>, 
 					<a href="https://www.instagram.com/brandonjchu/" target="_blank">Instagram</a>, 
   					<a href="https://www.linkedin.com/in/brandon-j-chu/" target="_blank">linkedIn</a>, 
-  					<a href="" target="_blank">Resume.pdf</a>
+  					<a href="assets/Brandon_J_Chu_Resume.pdf" target="_blank">Resume.pdf</a>
   				</p>
   			</div>
 		</details>
@@ -433,6 +451,14 @@
 			<figure>
 				<div>
 					<a href="sketchbook">
+						<img src="assets/images/sketchbook-2023/Lapel_Study_1_-_Double_Breasted_Jacket.webp">
+					</a>
+				</div>
+				<figcaption></figcaption>
+			</figure>
+			<figure>
+				<div>
+					<a href="sketchbook">
 						<img src="assets/images/sketchbook-2023/Ike_Jacket_Pattern_Sketch.webp">
 					</a>
 				</div>
@@ -441,15 +467,7 @@
 			<figure>
 				<div>
 					<a href="sketchbook">
-						<img src="assets/images/sketchbook-2023/Pattern-making_Development_1.webp">
-					</a>
-				</div>
-				<figcaption></figcaption>
-			</figure>
-			<figure>
-				<div>
-					<a href="sketchbook">
-						<img src="assets/images/sketchbook-2023/Pattern-making_Development_2.webp">
+						<img src="assets/images/sketchbook-2023/Lapel_Study_2_-_Ike_Jacket.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
@@ -466,6 +484,14 @@
 				<div>
 					<a href="sketchbook">
 						<img src="assets/images/sketchbook-2023/Fitting_Process_2.webp">
+					</a>
+				</div>
+				<figcaption></figcaption>
+			</figure>
+			<figure>
+				<div>
+					<a href="sketchbook">
+						<img src="assets/images/sketchbook-2023/Fitting_Process_3.webp">
 					</a>
 				</div>
 				<figcaption></figcaption>
