--- a/untitled-editorial-lookbook/index.html
+++ b/untitled-editorial-lookbook/index.html
@@ -19,7 +19,7 @@
   					<a href="mailto:brandon@brandonjchu.com" target="_blank">Email</a>, 
 					<a href="https://www.instagram.com/brandonjchu/" target="_blank">Instagram</a>, 
   					<a href="https://www.linkedin.com/in/brandon-j-chu/" target="_blank">linkedIn</a>, 
-  					<a href="" target="_blank">Resume.pdf</a>
+  					<a href="../assets/Brandon_J_Chu_Resume.pdf" target="_blank">Resume.pdf</a>
   				</p>
   			</div>
 		</details>
@@ -32,7 +32,7 @@
 		<div>&nbsp;</div>
 		<div>
 			<h2>
-				<details>
+				<details class="dropdown">
 					<summary>Collection</summary>
 					<ol>
 						<li><a href="../homme-body-editorial"><span class="arrRight">Homme Body, 2023</span>Editorial</a></li>
