--- a/untitled-editorial-lookbook/index.html
+++ b/untitled-editorial-lookbook/index.html
@@ -10,22 +10,18 @@
 </head>
 <body>
 	<header>
-		<h1><a href="/" class="normal">Brandon J.&thinsp;Chu</a>,</h1>
-		<details>
-  			<summary>Info</summary>
+		<details class="dropdown" id="brandon">
+  			<summary><a href="/">Brandon J.&thinsp;Chu</a></summary>
   			<div>
-  				<p>Brandon J. Chu is a fashion designer in New York, New York.</p>
-  				<p>
+  				<span>is a fashion designer in New York, New York.</span> <br>
+  				<span>
   					<a href="mailto:brandon@brandonjchu.com" target="_blank">Email</a>, 
 					<a href="https://www.instagram.com/brandonjchu/" target="_blank">Instagram</a>, 
   					<a href="https://www.linkedin.com/in/brandon-j-chu/" target="_blank">linkedIn</a>, 
-  					<a href="../assets/Brandon_J_Chu_Resume.pdf" target="_blank">Resume.pdf</a>
-  				</p>
+  					<a href="assets/Brandon_J_Chu_Resume.pdf" target="_blank">Resume.pdf</a>
+  				</span>
   			</div>
 		</details>
-		<!-- <div id="index">
-			<a href="javascript:history.back()">Index</a>
-		</div> -->
 	</header>
 
 	<nav class="left">
