--- a/homme-body-lookbook/index.html
+++ b/homme-body-lookbook/index.html
@@ -32,7 +32,7 @@
 					<summary>Collection</summary>
 					<ol>
 						<li><a href="../homme-body-editorial"><span class="arrRight">Homme Body, 2023</span>Editorial</a></li>
-						<li><a href="../sketchbook"><span class="arrRight">Sketchbool, 2023</span>Portfolio</a></li>
+						<li><a href="../sketchbook"><span class="arrRight">Sketchbook, 2023</span>Portfolio</a></li>
 						<li><a href="../untitled-editorial-lookbook"><span class="arrRight">Untitled, 2022</span>Editorial&hairsp;/&hairsp;Lookbook</a></li>
 					</ol>
 				</details>
