--- a/index2.html
+++ b/index2.html
@@ -404,7 +404,7 @@
 <body>
 	<header>
 		<details class="dropdown" id="brandon">
-  			<summary><a href="/">Brandon J.&thinsp;Chu</a></summary>
+  			<summary><a href="/index2.html">Brandon J.&thinsp;Chu</a></summary>
   			<div>
   				<span>is a fashion designer in New York, New York.</span> <br>
   				<span>
