--- a/index2.html
+++ b/index2.html
@@ -82,6 +82,10 @@
 			display: block;
 		}
 
+		.vertical > header > .header2 > p{
+			max-width: 32rem;
+		}
+
 
 		.vertical > header nav{
 			display: flex;
@@ -236,13 +240,10 @@
 
 
 		/* general typography */
-  		a:hover{
-			opacity: 0.5;
-		}
 		
-		summary:hover:after{
+		/*summary:hover:after{
 			opacity: 0.5;
-		}
+		}*/
 		
 		summary:hover > a{
 			opacity: 1;
