--- a/index2.html
+++ b/index2.html
@@ -96,11 +96,13 @@
 			display: inline-block;
 			width:1.2rem;
 			text-align: center;
-			border:1px solid transparent;
+/*			border:1px solid transparent;*/
 		}
 
 		.vertical > header nav > span.currentIndex{
-			border: 1px solid;
+/*			border: 1px solid;*/
+			background-color: black;
+			color:white;
 		}
 
 
@@ -117,10 +119,43 @@
 		}
 
 
+		/*	white */
+
+		body > header.vertical details,
+		.vertical > header details,
+		.vertical > header .back,
+		.vertical > header h3,
+		.vertical > header nav,
+		.vertical > header .fullCaption{
+			width: fit-content;
+			background-color: white;
+		}
+
+		.vertical > header .fullCaption{
+			border-bottom: 1px solid white;
+		}
+
+
+
+		/*body > header.vertical{
+			top:0;
+			padding-top: 1rem;
+		}
+
+		body > header.vertical, 
+		.vertical > header{
+			background-color: white;
+		}*/
+
+
+
+
+
 
 		.vertical header{
 			position: sticky;
 			top:3.4rem;
+/*			background-color: #fff;*/
 		}
 
 		.vertical header > .header1 .back{
@@ -394,7 +429,7 @@
 
 
 		
-		.dropdown#brandon > summary, .dropdown#brandon > div, .dropdown#brandon > div *{
+		body > header > .dropdown *{
 			display: inline;
 		} 
 		.dropdown[open] summary:after{
@@ -408,7 +443,18 @@
   			<summary><a href="/index2.html">Brandon J.&thinsp;Chu</a></summary>
   			<div>
   				<span>is a fashion designer in New York, New York.</span> <br>
-  				<span>
+  				<!-- <span>
+  					<a href="mailto:brandon@brandonjchu.com" target="_blank">Email</a>, 
+					<a href="https://www.instagram.com/brandonjchu/" target="_blank">Instagram</a>, 
+  					<a href="https://www.linkedin.com/in/brandon-j-chu/" target="_blank">linkedIn</a>, 
+  					<a href="assets/Brandon_J_Chu_Resume.pdf" target="_blank">Resume.pdf</a>
+  				</span> -->
+  			</div>
+		</details>
+		<details class="dropdown">
+			<summary>Contact</summary>
+			<div>
+				<span>
   					<a href="mailto:brandon@brandonjchu.com" target="_blank">Email</a>, 
 					<a href="https://www.instagram.com/brandonjchu/" target="_blank">Instagram</a>, 
   					<a href="https://www.linkedin.com/in/brandon-j-chu/" target="_blank">linkedIn</a>, 
@@ -832,6 +878,7 @@
 				allSections.forEach((section)=>{
 					section.classList.add('vertical');
 				})
+				document.querySelector('body > header').classList.add('vertical');
 
 				document.querySelector(window.location.hash).scrollIntoView();
 
