--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 <body>
 	<header>
 		<details class="dropdown" id="brandon">
-  			<summary><a href="/">Brandon J.&thinsp;Chu</a></summary>
+  			<summary>Brandon J.&thinsp;Chu</summary>
   			<div>
   				<span>is a fashion designer in New York, New York.</span> <br>
   				<!-- <span>
